# HyperForge-Svelte

./: '  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: main.yml
src/: App.svelte  models.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  model.rs
src/lib/: store.ts
src/lib/components/: GameSlot.svelte  SideNav.svelte  Slider.svelte  SliderBlock.svelte  Spinner.svelte
src/lib/views/: Homepage.svelte  OptionsPage.svelte
